--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
     "autoprefixer": "^10",
