--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-slick": "^0.29.0",
+    "react-whatsapp": "^0.3.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.32"
   },
